Build update - Added Java version